# try_cuda

./: .gitignore
compile_cuda/: CMakeLists.txt
compile_cuda/src/: CMakeLists.txt  main.cpp
compile_cuda/src/cuda/: CMakeLists.txt  foo.cu
test_boxing/: multiround_test_b2b_broadcast.py  multiround_test_p2b_allreduce.py  multiround_test_p2b_reduce.py  test_b2b_broadcast.py  test_p2b.py  test_p2b_allreduce.py  test_p2b_reduce.py  test_p2b_single_client.py
test_boxing/debug/: uncleaned_out.py
test_boxing_pz/: readme.md  test_p2b.py  test_reduce.py
test_cuda_stream/: CMakeLists.txt
test_cuda_stream/include/cuda/: kernel.cuh
test_cuda_stream/src/: CMakeLists.txt  cuda_non_stream.cpp  cuda_stream.cpp
test_cuda_stream/src/cuda/: CMakeLists.txt  kernel.cu
